--- a/index.html
+++ b/index.html
@@ -21,10 +21,11 @@
 <body>
 
 <div id="mainDiv">
-	<div id="content">
+	<div id="content">	
 		<div id="code">
-			<span class="keyword">Chan xin lỗi :(</span><br />
-
+			<span class="keyword">Chan nhớ Hấp lắm :( Chan như mất đi cả thế giới rồi...</span><br />
+			<span class="keyword">Chan không thể ngủ được, chan nhìn đâu cũng thấy Hấp, nhưng chan không có tư cách gì nữa rồi @@</span><br />
+			<span class="keyword">Chan sai rồi :(</span><br />
 
 			
 		</div>
